--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: sloth
 description: I love sleeping... eating... and 💩ing
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/13430641?v=3&s=460
+avatar: http://sloth.ilkyu.kr/images/profile_photo.png
 
 #
 # Flags below are optional
