--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: sloth
 
 # Short bio or description (displayed in the header)
-description: I love sleeping... eating... and 💩ing
+description: I love sleeping... eating... and :shit:ing
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://sloth.ilkyu.kr/images/profile_photo.png
